--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -48,18 +48,38 @@
     </script>
     {{end}}
     <script src="https://cdn.tailwindcss.com/3.4.17"></script>
+    {{if .Development}}
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     fontFamily: {
-                        sans: ['-apple-system', 'BlinkMacSystemFont', '"Segoe UI"', 'Roboto', '"Helvetica Neue"', 'Arial', 'sans-serif'],
-                        content: ['Georgia', 'Cambria', '"Times New Roman"', 'Times', 'serif'],
+                        sans: [ 
+                            'Roboto',
+                            '"Segoe UI"',
+                            '-apple-system',
+                            'BlinkMacSystemFont',
+                            '"Helvetica Neue"',
+                            'Arial',
+                            'sans-serif',
+                            '"Apple Color Emoji"',
+                            '"Segoe UI Emoji"',
+                            '"Segoe UI Symbol"'
+
+                        ],
+                        content: [
+                            'Georgia',
+                            'Cambria',
+                            '"Times New Roman"',
+                            'Times',
+                            'serif'
+                        ],
                     }
                 }
             }
         }
     </script>
+    {{end}}
     {{if .MarkdownEnabled}}
     <link id="markdown-css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css" integrity="sha512-BrOPA520KmDMqieeM7XFe6a3u3Sb3F1JBaQnrIAmWg3EYrciJ+Qqe6ZcKCdfPv26rGcgTrJnZ/IdQEct8h3Zhw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     {{end}}
